# cnpj

./: .gitignore  README.md  pyproject.toml
src/cnpj/: __init__.py  __main__.py  cli.py  core.py
